# Post-Earnings-Forecast

./: .gitignore  README.md  main.py  pyproject.toml
docs/: checklist.md  flow.md  fundamental_indicators.md
src/: main.ipynb
src/data/: news_sentiment_data.xlsx
src/data/metrics/: snp500_info.parquet
src/data/model_staging/: finbert_tx_agg_mean.parquet  finbert_tx_agg_weighted.parquet  nz_sentiment.parquet
src/ingestion/: backfill.py  backfill_earnings.py  backfill_news.py  backfill_ohvlc.py  backfill_transcripts.py  backup.py  index_data.py  migration.py  snp500.py  table_setup.py  transcript_news.py  upgrades_downgrades.py
src/ingestion/data/: index_data.parquet  snp500_2026-05-23.csv  top_finance.csv  top_health.csv  top_tech.csv  upgrades_downgrades.parquet
src/modeling/: B2_Pipeline.ipynb  b1 pipeline.ipynb  b1_pipeline.ipynb  b3_pipeline.ipynb  b4_pipeline.ipynb  b5_tunned_pipeline.ipynb  base_paper_reproduction.ipynb  lstm.ipynb  modal_finbert.py  modal_tests.py  pca.ipynb  technical_features.py  val.py
src/modeling/models/: b2_linreg.pkl  b2_lr_clf.pkl  b2_results.pkl  b2_xgb_clf.pkl  b2_xgb_reg.pkl
src/notebooks/: Initial EDA.ipynb  Initial EDA_AD.ipynb  Initial_EDA_1.ipynb  Initial_EDA_changes_fixes.ipynb  analyst_upgrades.parquet  eda.ipynb  eda_A.ipynb  fundamental.ipynb  main.ipynb  pead_all_pipeline.py  pead_pipeline.py
src/notebooks/data/: sector_info.parquet
src/preprocessing/: bert_compaction_tx.py  bert_earnings_call.py  colab_tx.ipynb  lm_sentiment_tx.py  sentiment_stg.py  vector_emb.py
(+15 files in other folders)
