[project]
name = "post-earnings-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.5.2",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "lxml>=6.1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests[socks]>=2.34.2",
    "stem>=1.8.2",
    "yfinance>=1.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
