[project]
name = "post-earnings-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.0",
    "dotenv>=0.9.9",
    "duckdb>=1.5.2",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "lxml>=6.1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "polars>=1.41.0",
    "pyarrow>=24.0.0",
    "requests[socks]>=2.34.2",
    "s3fs>=2026.4.0",
    "scikit-learn>=1.8.0",
    "stem>=1.8.2",
    "yfinance>=1.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
